added header, some blocks and styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $color-gray: #6d6d6d;
 $color-red: #dd3030;
 $color-green: #20da7d;
 $color-violet: #ce3192;
-$color-blue: #e7e3ffcb;
+$color-blue: #90b8d8;
 $color-violet--darken: #2a0b3b;
 
 // FONT-SIZE
