--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $primary-color;
+}
+
 html,
 body {
   font-family: $font-family;
@@ -5,4 +13,63 @@ body {
 
   color: $secondary-color;
   overflow-x: hidden;
+}
+
+.container {
+  @include container();
+}
+
+.image {
+  width: 100%;
+}
+
+.pt-2 {
+  padding-top: $p-2;
+}
+
+.lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  padding: $p-2;
+}
+
+.title {
+  @include transition();
+
+  padding: $p-2;
+
+  font-size: $font-32;
+  font-weight: $font-w-700;
+
+  text-align: right;
+  text-decoration: underline;
+  letter-spacing: 0.5rem;
+  color: $primary-color;
+  cursor: pointer;
+
+  &:hover {
+    color: $color-violet;
+  }
+
+  &-section {
+    padding: $p-2;
+
+    font-size: $font-20;
+    text-align: center;
+    color: $color-violet;
+  }
+
+  &-description {
+    padding: 0 $p-0-5;
+
+    font-size: $font-12;
+    text-align: center;
+
+    color: $color-violet;
+    letter-spacing: 1px;
+    line-height: 1.3;
+  }
 }
