--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -107,10 +107,159 @@ input {
   border-radius: 0;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4d2268;
+}
+
 html,
 body {
   font-family: "Poppins", sans-serif;
   font-size: 12px;
   color: #272727;
   overflow-x: hidden;
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.image {
+  width: 100%;
+}
+
+.pt-2 {
+  padding-top: 2rem;
+}
+
+.lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 2rem;
+}
+
+.title {
+  transition: all 0.3s;
+  padding: 2rem;
+  font-size: 32px;
+  font-weight: 700;
+  text-align: right;
+  text-decoration: underline;
+  letter-spacing: 0.5rem;
+  color: #4d2268;
+  cursor: pointer;
+}
+.title:hover {
+  color: #ce3192;
+}
+.title-section {
+  padding: 2rem;
+  font-size: 20px;
+  text-align: center;
+  color: #ce3192;
+}
+.title-description {
+  padding: 0 0.5rem;
+  font-size: 12px;
+  text-align: center;
+  color: #ce3192;
+  letter-spacing: 1px;
+  line-height: 1.3;
+}
+
+.btn {
+  transition: all 0.3s;
+  display: inline-block;
+  width: 140px;
+  height: 45px;
+  margin: 1rem 2rem;
+  text-decoration: none;
+  line-height: 45px;
+  border-radius: 45px;
+  text-align: center;
+  letter-spacing: 1px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #000000;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+}
+.btn:hover {
+  background-color: #4d2268;
+  box-shadow: 0 5px 10px rgba(77, 34, 104, 0.4);
+  transform: translateY(-3px);
+}
+.btn__more {
+  background-color: #6d6d6d;
+}
+.btn__add {
+  background-color: #20da7d;
+}
+.btn__view {
+  background-color: #2a0b3b;
+}
+.btn__fixed {
+  position: fixed;
+  bottom: 2rem;
+  left: 0;
+}
+.btn__fixed_top {
+  position: fixed;
+  top: 2rem;
+  right: 0;
+  z-index: 10;
+}
+
+.navbar {
+  position: absolute;
+  margin-left: 8.7rem;
+}
+.navbar__lists {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar__list {
+  padding: 1.5rem;
+  list-style: none;
+}
+.navbar__link {
+  transition: all 0.3s;
+  padding: 0.5rem 0;
+  text-decoration: overline;
+  color: #ffffff;
+  font-size: 12px;
+}
+.navbar__link:hover {
+  color: #ce3192;
+  border-bottom: 1px solid #ce3192;
+  text-decoration: none;
+}
+
+.back {
+  color: #ce3192;
+}
+.back:hover {
+  color: #2a0b3b;
+  border-bottom: 1px solid #2a0b3b;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 15rem;
+  padding: 2rem;
+  background-color: #4d2268;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 15vh 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 0, 15vh 100%);
+  z-index: 10;
 }/*# sourceMappingURL=main.css.map */
