--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -216,6 +216,17 @@ body {
   z-index: 10;
 }
 
+.swiper {
+  width: 100%;
+  height: auto;
+}
+.swiper-scrollbar {
+  bottom: 0;
+}
+.swiper-scrollbar-drag {
+  background-color: #ce3192;
+}
+
 .navbar {
   position: absolute;
   margin-left: 8.7rem;
@@ -250,6 +261,40 @@ body {
   border-bottom: 1px solid #2a0b3b;
 }
 
+.product {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.product__item {
+  transition: all 0.3s;
+  position: relative;
+  width: 25%;
+  margin: 1rem;
+  padding: 2rem;
+  text-align: center;
+  background-color: #4d2268;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.product__item:hover {
+  transform: translateY(-3px);
+}
+.product__image {
+  padding: 2rem;
+}
+.product__title {
+  padding: 1rem;
+  font-size: 20px;
+  font-weight: 500;
+  color: #ffffff;
+}
+.product__description {
+  padding: 1rem;
+  color: #ce3192;
+  line-height: 1.5;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -262,4 +307,22 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 15vh 100%);
           clip-path: polygon(0 0, 100% 0, 100% 0, 15vh 100%);
   z-index: 10;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 15rem;
+  padding: 2rem;
+  background-color: #2a0b3b;
+  -webkit-clip-path: polygon(100% 35vh, 100% 15vh, 100% 0, 0 100%);
+          clip-path: polygon(100% 35vh, 100% 15vh, 100% 0, 0 100%);
+}
+.footer-navbar {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }/*# sourceMappingURL=main.css.map */
