added categories and gallery pages

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -309,6 +309,52 @@ body {
   z-index: 10;
 }
 
+.section {
+  padding: 3rem 0;
+  border-bottom: 2px solid #ce3192;
+}
+.section__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section__block_image {
+  position: relative;
+  width: 50%;
+  height: 30rem;
+  background-color: #4d2268;
+  -webkit-clip-path: polygon(3vh 18%, 100% 100vh, 100vh 100%, 100% 0);
+          clip-path: polygon(3vh 18%, 100% 100vh, 100vh 100%, 100% 0);
+}
+.section__block_title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-25%, -45%);
+  font-size: 80px;
+  font-weight: 700;
+  color: #ce3192;
+  text-align: center;
+}
+.section__block_description {
+  transition: all 0.3s;
+  width: 50%;
+  padding: 3rem;
+  text-align: center;
+}
+.section__block_description:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(77, 34, 104, 0.4);
+}
+.section__image {
+  display: flex;
+  justify-content: center;
+}
+.section-1 {
+  margin-top: 1.5rem;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
